# dynTaintTracer

./: CMakeLists.txt  Makefile  README.md  TODO  dynTaintTracer.cpp  dynTaintTracer.idc  dynTaintTracer.sh  num2reg.h  num2syscall.h  ops.c  ops_aarch.c  ops_funcs.c  regs_checktaint.c  regs_getvalue.c  regs_searchvalue.c  regs_taint.c  regs_untaint.c
